# Yet-Another-EfficientDet-Pytorch

./: .gitignore  efficientdet_test.py  pyproject.toml  requirements.txt
src/dh4pmp_efficientdet/efficientdet/: model.py
src/dh4pmp_efficientdet/utils/: utils.py
