[project]
name = "dh4pmp_efficientdet"
version = "0.0.1"
authors = [
  { name="Henrik Kragh Sørensen", email="henrik.kragh@ind.ku.dk" },
]
description = "EfficientDet adaptation built upon code from [Yet Another EfficientDet Pytorch]"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "tqdm",
  "torch",
  "torchvision",
  "webcolors"
  ]

[project.urls]
"Homepage" = "www.dh4pmp.dk"